--- a/Layouts/AnimaçãoDado.uistate.xml
+++ b/Layouts/AnimaçãoDado.uistate.xml
@@ -5,16 +5,16 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>604.611</position-x>
-        <position-y>285.753</position-y>
+        <position-y>444.393</position-y>
         <position-z>146.41</position-z>
         <lookat-x>604.611</lookat-x>
-        <lookat-y>285.753</lookat-y>
+        <lookat-y>444.393</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
-    <snap-to-grid>0</snap-to-grid>
-    <show-grid>0</show-grid>
-    <snap-width>32</snap-width>
-    <snap-height>32</snap-height>
+    <snap-to-grid>1</snap-to-grid>
+    <show-grid>1</show-grid>
+    <snap-width>40</snap-width>
+    <snap-height>40</snap-height>
     <show-collision-polys>0</show-collision-polys>
     <translucent-inactive-layers>0</translucent-inactive-layers>
     <properties>
@@ -23,9 +23,10 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Fundo" />
+    <active-layer name="Popup" />
     <layers>
         <layer locked="0" name="Fundo" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Vídeo" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Popup" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
